--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Jordy Meyer</title>
   </head>
   
   <body>
+    <h1> Jordy Meyer</h1>
   </body>
 
 </html>
